--- a/index.html
+++ b/index.html
@@ -41,29 +41,29 @@
         >
       </address>
     </header>
-
-    <section class="cover">
-      <div class="overlay"></div>
-      <h1 class="cover__title">
-        <span class="aligned-text"
-          ><span class="letter-spacing-extended">о</span>но</span
-        >
-        <span class="aligned-text_center"
-          ><span class="letter-spacing-extended">те</span>бе</span
-        >
-        <span class="aligned-text_right"
-          >н<span class="letter-spacing-extended">ад</span
-          ><span class="no-letter-spacing">о</span></span
-        >
-      </h1>
-      <h2 class="cover__description">
-        <span class="cover__description-text">
-          Аукцион вещей, в которые никто не верил
-        </span>
-        <span class="bet-button"> Сделать ставку </span>
-      </h2>
-    </section>
-
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            ><span class="letter-spacing-extended">о</span>но</span
+          >
+          <span class="aligned-text_center"
+            ><span class="letter-spacing-extended">те</span>бе</span
+          >
+          <span class="aligned-text_right"
+            >н<span class="letter-spacing-extended">ад</span
+            ><span class="no-letter-spacing">о</span></span
+          >
+        </h1>
+        <h2 class="cover__description">
+          <span class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </span>
+          <span class="bet-button"> Сделать ставку </span>
+        </h2>
+      </section>
+    </main>
     <section class="lots">
       <h3 class="lots__heading">лоты</h3>
       <ul class="lots__card-list">
@@ -123,7 +123,7 @@
           </a>
         </li>
       </ul>
-      <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      <h5><a href="#" class="lots__look-more-link">посмотреть больше</a></h5>
     </section>
     <section class="about">
       <div class="about__column">
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div>
-        <h5 class="about__title">Об аукционе</h5>
+        <h6 class="about__title">Об аукционе</h6>
         <h6 class="about__text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
