день 4 исправлен css пушу пока ничего не сломал

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__menu-list">
-          <li class="header__menu-item header__menu-link-main">
+          <li class="header__menu-item header__menu-item-no-marker">
             <a class="header__menu-link" href="#0">главная</a>
           </li>
           <li class="header__menu-item">
