--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             <a class="header__menu-link link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link-about link" href="#0"
-              >об аукционе</a
-            >
+            <a class="header__menu-link link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -36,9 +34,7 @@
       <address class="address">
         <a class="link" href="tel:+79001111111">+9 999 555 5555</a>
         <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <span class="amsterdam"
-          >наб. Принсенграхт 263-265, <br />Амстердам</span
-        >
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -56,25 +52,25 @@
             ><span class="no-letter-spacing">о</span></span
           >
         </h1>
-        <h2 class="cover__description">
-          <span class="cover__description-text">
+        <div class="cover__description">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </span>
-          <span class="bet-button"> Сделать ставку </span>
-        </h2>
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
       </section>
     </main>
     <section class="lots">
-      <h3 class="lots__heading">лоты</h3>
+      <h2 class="lots__heading">лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
           <a href="#" class="card-link">
             <div class="card card_type_film">
               <div class="overlay"></div>
               <article class="card-content">
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h4>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -89,9 +85,9 @@
             <div class="card card_type_book">
               <div class="overlay"></div>
               <article class="card-content">
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h4>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -109,9 +105,9 @@
             <div class="card card_type_picture">
               <div class="overlay"></div>
               <article class="card-content">
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h4>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -129,14 +125,14 @@
       <div class="about__column">
         <div class="about__logo">
           <img
-            src="/images/logo-white.svg"
+            src="images/logo-white.svg"
             alt="Логотип аукциона"
             class="about__logo-image"
           />
         </div>
       </div>
       <div>
-        <h6 class="about__title">Об аукционе</h6>
+        <h4 class="about__title">Об аукционе</h4>
         <p class="about__text">
           Здесь вы не встретите очередное пафосное собрание невероятно дорогого
           антиквариата. Наши лоты вообще не должны были попасть ни на один
@@ -144,7 +140,7 @@
           которую может нарисовать даже ребёнок? Кому нужны все эти странные
           вещи, созданные любителями?
         </p>
-        <p class="about__text-sequel">
+        <p class="about__text">
           Слишком сложные или, наоборот, слишком простые. Опережающие своё
           время. В пух и прах растерзанные критиками. Непринятые и непонятые.
           Когда-то они казались просто неудачными. Но, несмотря на критику,
@@ -159,20 +155,19 @@
       <address class="address">
         <a class="link" href="tel:+79001111111">+9 999 555 5555</a>
         <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <span class="amsterdam"
-          >наб. Принсенграхт 263-265, <br />Амстердам</span
+        <p>наб. Принсенграхт 263-265, Амстердам</p
         >
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-item footer__menu-link-main">
+          <li class="footer__menu-item">
             <a class="footer__menu-link" href="#0">главная</a>
           </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__menu-item">
-            <a class="footer__menu-link footer__menu-link-about link" href="#0"
+            <a class="footer__menu-link link" href="#0"
               >об аукционе</a
             >
           </li>
