день 4 исправлен css и html

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
       <address class="address">
         <a class="link" href="tel:+79001111111">+9 999 555 5555</a>
         <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, Амстердам</p
-        >
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -167,9 +166,7 @@
             <a class="footer__menu-link link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__menu-item">
-            <a class="footer__menu-link link" href="#0"
-              >об аукционе</a
-            >
+            <a class="footer__menu-link link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
