--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </a>
         </li>
       </ul>
-      <h5><a href="#" class="lots__look-more-link">посмотреть больше</a></h5>
+      <a href="#" class="lots__look-more-link">посмотреть больше</a>
     </section>
     <section class="about">
       <div class="about__column">
